RESOLVED FIXED74523
[GTK] Page size should be 0,0 when view widget is not realized
https://bugs.webkit.org/show_bug.cgi?id=74523
Summary [GTK] Page size should be 0,0 when view widget is not realized
Carlos Garcia Campos
Reported 2011-12-14 11:01:39 PST
For consistency with WebCore that uses 0,0 as empty size. GTK+ initializes the widget allocation as -1, -1, 1, 1.
Attachments
Patch (1.41 KB, patch)
2011-12-14 11:04 PST, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2011-12-14 11:04:37 PST
Martin Robinson
Comment 2 2011-12-14 11:08:17 PST
Comment on attachment 119254 [details] Patch How did you notice this? Did it cause a bug somewhere?
WebKit Review Bot
Comment 3 2011-12-14 11:12:42 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 4 2011-12-14 11:24:22 PST
(In reply to comment #2) > (From update of attachment 119254 [details]) > How did you notice this? Did it cause a bug somewhere? Writing the unit test for the window properties patch. I do someting like window.open('', '', 'left=10,top=20,width=800,height=600'); and I get 10, 20, 799, 599 from WindowFeatures, because in FrameLoader::createWindow() the window size is adjusted for the difference between the window size and the page size: if (features.widthSet) windowRect.setWidth(features.width + (windowRect.width() - pageSize.width())); if (features.heightSet) windowRect.setHeight(features.height + (windowRect.height() - pageSize.height())); initially the window rect is 0, 0 and page size is 1, 1
Carlos Garcia Campos
Comment 5 2011-12-14 11:38:30 PST
Note You need to log in before you can comment on or make changes to this bug.