[GTK] Page size should be 0,0 when view widget is not realized https://bugs.webkit.org/show_bug.cgi?id=74523

Reviewed by Martin Robinson.

We currently return 1,1 because GTK+ initializes widget allocation
as -1,-1,1,1.

* UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::viewSize): Check whether widget is
realized and return IntSize() in that case.

Canonical link: https://commits.webkit.org/91189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102804 268f45cc-cd09-0410-ab3c-d52691b4dbfc